--- a/package.json
+++ b/package.json
@@ -4,16 +4,29 @@
   "description": "My Portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack",
+    "webpack-watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ashishgumaste/my-portfolio.git"
   },
-  "author": "Ashish Gumaste",
+  "author": "Ashish Gumaste <ashish.gumaste@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ashishgumaste/my-portfolio/issues"
   },
-  "homepage": "https://github.com/ashishgumaste/my-portfolio#readme"
+  "homepage": "https://github.com/ashishgumaste/my-portfolio#readme",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13"
+  }
 }
