--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,9 @@ version: 0.1
 phases:
   build:
     commands:
-      - echo Nothing to add yet
+      - npm install
+      - npm run webpack
+
 artifacts:
   files:
     - index.html
@@ -11,3 +13,4 @@ artifacts:
     - Ashish-Gumaste.pdf
     - styles/main.css
     - images/*
+    - dist/bundle.js
